--- a/game.html
+++ b/game.html
@@ -86,19 +86,19 @@ function drawImage(img) {
 function updateGameArea() {
 if (mD == 0)
 {
-	drawImage("wall.jpg");
+	drawImage("src/images/wall.jpg");
 }
 if (mD == 1)
 {
-	drawImage("hallway.jpg");
+	drawImage("src/images/hallway.jpg");
 }
 if (mD == 2)
 {
-	drawImage("wall.jpg");
+	drawImage("src/images/wall.jpg");
 }
 if (mD == 3)
 {
-	drawImage("hallway.jpg");
+	drawImage("src/images/hallway.jpg");
 }
 
 
